# pyorcidator

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  requirements.txt  sample.json  setup.cfg  tox.ini
.github/workflows/: lint.yml  tests.yml
src/: helper.py  import_info.py  wikidata_lookup.py
src/dictionaries/: all.py  degree.json  institutions.json
src/pyorcidator/: __init__.py  classes.py  cli.py  helper.py  import_info.py  import_info_from_list.py  pyorcid.py  quickstatements.py  run_for_event.py  wikidata_lookup.py
src/pyorcidator/dictionaries/: __init__.py  all.py  degree.json  fields.json  institutions.json  role.json  update_degrees.py  update_fields.py  update_institutions.py  update_roles.py  utils.py
test/: orcids.txt
tests/: conftest.py  sample.json  test_helper.py  test_quickstatements.py  test_trivial.py  test_wikidata_lookup.py  wikidata_api_result.json
