[metadata]
name = pyorcidator
version = 0.0.1-dev
description = Work with ORCID and Wikidata
long_description = file: README.md
long_description_content_type = text/markdown

license = MIT
license_file = LICENSE

[options]
install_requires =
    clipboard
    requests
    SPARQLWrapper

zip_safe = false
include_package_data = true

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
