[metadata]
name = pyorcidator
version = 0.0.1-dev
description = Work with ORCID and Wikidata
long_description = file: README.md
long_description_content_type = text/markdown

license = MIT
license_file = LICENSE

[options]
install_requires =
    wdcuration
    clipboard
    requests
    SPARQLWrapper
    click
    pydantic
    quickstatements_client

zip_safe = false
include_package_data = true

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src


[options.extras_require]
tests =
    pytest

[options.entry_points]
console_scripts =
    pyorcidator = pyorcidator.cli:cli

[mypy]
plugins = pydantic.mypy
